# Minecraft-Raytracing

./: .gitattributes  CMakeLists.txt  Minecraft Raytracing.sln  README.md
Commands/: Commands.vcxproj  main.cpp
Dep/Imgui/: CMakeLists.txt  imgui.cpp  imgui_impl_glfw.cpp
Dep/glad/include/glad/: gl.h
Dep/glad/src/: gl.c
Dep/glfw/: CMakeLists.txt
Imgui/: imgui_impl_glfw.cpp
Minecraft Raytracing/: Camera.cpp  Camera.h  ImguiWindows.cpp  ImguiWindows.h  Minecraft Raytracing.vcxproj  Minecraft Raytracing.vcxproj.filters  PhysicsSolver.cpp  PhysicsSolver.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  SaveManager.h  SettingsManager.cpp  SettingsManager.h  SimplexNoise.cpp  SimplexNoise.h  VoxelTexture.cpp  VoxelTexture.h  compte.py  compute.glsl  default.stg  frag.glsl  imgui.ini  ogt_vox.h  shader.frag  shader.vert  stb_image.h  test.txt  utils.cpp  utils.h  vert.glsl  vf3d.cpp  vf3dMat44.h
Minecraft Raytracing/Data/: default - Copie.stg  save.stg  test.txt
Minecraft Raytracing/Data/Shader/: compute.glsl  shader.frag
Minecraft Raytracing/Data/Vox/: blocks.vox  chr_sword.vox  penis.vox  teapot.vox  weed.vox
Minecraft Raytracing/Vox/: Dimas Trees.vox  boat.vox  grass.vox  menger.vox  teapot.vox
data/: default.stg  save.stg  test.txt
data/Shader/: compute.glsl  shader.frag
data/Vox/: barrier.vox  castle.vox  log.vox
src/: CMakeLists.txt  ImguiWindows.cpp  ImguiWindows.h  PhysicsSolver.cpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  SaveManager.cpp  SettingsManager.h  VoxelTexture.cpp  VoxelTexture.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp  utils.h
